--- a/views/partials/Header.ejs
+++ b/views/partials/Header.ejs
@@ -11,6 +11,7 @@
     <header>
       <nav>
         <a href="/register">Register</a>
+        <a href="/login">Login</a>
         <a href="/">Home</a>
       </nav>
     </header>
